--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </div>
     
     <div id="menu-bg" class="menu-bg col-xs-6"></div>
-    <h1 class="neon" data-text="[Neon_Light]"style="font-size:50px">The</h1>
-    <h1 class="neon" data-text="[Neon_Light]"style="font-size:50px" id="one">Official</h1>
-    <h1 class="neon" data-text="[Neon_Light]" style="font-size:50px" id="two">Site</h1>
+    <h1 class="neon" data-text="[Neon_Light]"style="font-size:5vw;">The</h1>
+    <h1 class="neon" data-text="[Neon_Light]"style="font-size:5vw;" id="one">Official</h1>
+    <h1 class="neon" data-text="[Neon_Light]" style="font-size:5vw;" id="two">Site</h1>
     </div> 
     </div>  
    </div> 
