--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
 
 <div class="container-fluid">
   
-  <img src="deepu.jpg"  class=" img-circle" height="200px" width="200px" style="margin-left:600px;margin-top: 10%;">
+  <img src="deepu.jpg" class=" img-circle" style="margin-left:600px;margin-top: 10%;height: 300px;width: 280px;" width="200px" height="200px">
 </div> 
-  <div id="four">
+  
   <div id="three"> 
   <p id="demo"></p>
 </div>
-</div>
+
   
  
 
