--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="contacts.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <style>
+      h3{
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div id="one" >
