--- a/about.html
+++ b/about.html
@@ -16,8 +16,7 @@
 
 <div class="container-fluid">
   
-  <img src="deepu.jpg" class=" img-circle" style="margin-left:600px;margin-top: 10%;height: 300px;width: 280px;" width="200px" height="200px">
-</div> 
+  <img src="deepu.jpg" class=" img-circle" ></div>
   
   <div id="three"> 
   <p id="demo"></p>
