--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
     </div>
     
-    <div id="menu-bg" ></div>/
+    <div id="menu-bg" ></div>
     <h1 class="neon" data-text="[Neon_Light]" id="ten">The</h1>
     <h1 class="neon" data-text="[Neon_Light]" id="one">Official</h1>
     <h1 class="neon" data-text="[Neon_Light]" id="two">Site</h1>
